// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup rendering renders expected elements 1`] = `
<div
  className="RadioGroup TestClass"
  id="test"
  onKeyDown={[Function]}
  role="radiogroup"
>
  <RadioButton
    checked={true}
    id="test-foo"
    label="FOO"
    onChange={[Function]}
    tabIndex={0}
    value="foo"
  />
  <RadioButton
    checked={false}
    id="test-bar"
    label="BAR"
    onChange={[Function]}
    tabIndex={-1}
    value="bar"
  />
  <RadioButton
    checked={false}
    id="test-baz"
    label="BAZ"
    onChange={[Function]}
    tabIndex={-1}
    value="baz"
  />
</div>
`;

exports[`RadioGroup rendering renders expected elements when className is not set 1`] = `
<div
  className="RadioGroup"
  id="test"
  onKeyDown={[Function]}
  role="radiogroup"
>
  <RadioButton
    checked={true}
    id="test-foo"
    label="FOO"
    onChange={[Function]}
    tabIndex={0}
    value="foo"
  />
  <RadioButton
    checked={false}
    id="test-bar"
    label="BAR"
    onChange={[Function]}
    tabIndex={-1}
    value="bar"
  />
  <RadioButton
    checked={false}
    id="test-baz"
    label="BAZ"
    onChange={[Function]}
    tabIndex={-1}
    value="baz"
  />
</div>
`;
